--- a/frontend/partner-dashboard.html
+++ b/frontend/partner-dashboard.html
@@ -252,23 +252,28 @@
                 </div>
 
                 <!-- Desktop Navigation -->
-                <div class="hidden md:flex items-center space-x-6">
-                    <a href="#dashboard" class="text-gray-700 hover:text-blue-600 font-medium transition-colors flex items-center space-x-1">
+                <div class="hidden md:flex items-center space-x-6 text-sm">
+                    <a href="#" class="block py-2 px-4 text-gray-700 hover:bg-blue-50 hover:text-blue-600 rounded-lg transition-colors flex items-center space-x-1 relative" >
                         <i class="fas fa-chart-pie"></i>
                         <span>Dashboard</span>
                     </a>
-                    <a href="#referrals" class="text-gray-700 hover:text-blue-600 font-medium transition-colors flex items-center space-x-1">
+                    <a href="referrals.html" class="block py-2 px-4 text-gray-700 hover:bg-blue-50 hover:text-blue-600 rounded-lg transition-colors flex items-center space-x-1 relative">
                         <i class="fas fa-handshake"></i>
                         <span>Referrals</span>
                     </a>
-                    <a href="#commissions" class="text-gray-700 hover:text-blue-600 font-medium transition-colors flex items-center space-x-1">
+                    <a href="commission-report.html" class="block py-2 px-4 text-gray-700 hover:bg-blue-50 hover:text-blue-600 rounded-lg transition-colors flex items-center space-x-1 relative">
                         <i class="fas fa-money-bill-wave"></i>
                         <span>Commissions</span>
                     </a>
-                    <a href="#profile" class="text-gray-700 hover:text-blue-600 font-medium transition-colors flex items-center space-x-1">
-                        <i class="fas fa-user"></i>
-                        <span>Profile</span>
+                    <a href="notifications.html" class="block py-2 px-4 text-gray-700 hover:bg-blue-50 hover:text-blue-600 rounded-lg transition-colors flex items-center space-x-1 relative">
+                        <i class="fas fa-bell w-5"></i>
+                        <span>Notifications</span>
+                        <span class="notification-badge" id="mobileNotificationCount">0</span>
                     </a>
+
+                    <button id="logoutBtn" class="block py-2 px-4 text-red-700 hover:bg-red-50 hover:text-red-600 rounded-lg transition-colors flex items-center space-x-1 relative">
+                        <i class="fas fa-sign-out-alt"></i>
+                        <span>Sign Out</span>
                 </div>
 
                 <!-- User Menu & Mobile Toggle -->
@@ -521,6 +526,37 @@
                     </div>
                 </div>
             </section>
+
+
+<!-- Payout Quick Action Card -->
+<div class="glass-card rounded-2xl p-6 fade-in">
+    <div class="flex items-center justify-between mb-4">
+        <h3 class="text-lg font-semibold text-gray-900 flex items-center">
+            <i class="fas fa-hand-holding-usd text-green-500 mr-2"></i>Payouts
+        </h3>
+        <span class="bg-green-100 text-green-600 px-2 py-1 rounded text-xs" id="payoutStatusBadge">
+            Ready
+        </span>
+    </div>
+    
+    <div class="space-y-3">
+        <div class="flex justify-between items-center">
+            <span class="text-gray-600">Available for Payout:</span>
+            <span class="font-bold text-green-600" id="dashboardAvailablePayout">₦0</span>
+        </div>
+        <div class="flex justify-between items-center">
+            <span class="text-gray-600">Eligible Referrals:</span>
+            <span class="font-semibold" id="dashboardEligibleCount">0</span>
+        </div>
+        
+        <div class="pt-2">
+            <a href="partner-payouts.html" 
+               class="w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-4 rounded-lg transition flex items-center justify-center text-sm">
+                <i class="fas fa-wallet mr-2"></i>Manage Payouts
+            </a>
+        </div>
+    </div>
+</div>
 
             <!-- Recent Activity & Quick Actions -->
             <section class="grid lg:grid-cols-3 gap-6">
